2005-08-16  Wim Taymans  <wim@fluendo.com>

	* configure.ac:
	* ext/amrnb/amrnbparse.c: (gst_amrnbparse_read_header):
	Fix compile warning.

	* ext/lame/gstlame.c: (gst_lame_class_init),
	(gst_lame_src_getcaps), (gst_lame_src_setcaps),
	(gst_lame_sink_setcaps), (gst_lame_init), (gst_lame_sink_event),
	(gst_lame_chain), (gst_lame_change_state):
	* ext/lame/gstlame.h:
	Port lame plugin

2005-08-16  Andy Wingo  <wingo@pobox.com>

	* ext/raw1394/gstdv1394src.c (gst_dv1394src_iso_receive): Note
	license info in the source code -- was only in the commit log
	before.

	* ext/dv/gstdvdec.h:
	* ext/dv/gstdvdec.c: Only decodes systemstream=FALSE dv video --
	old pipelines using dvdec should probably have a dvdemux first.

	* ext/dv/gstdvdemux.h:
	* ext/dv/gstdvdemux.c: Split out from dvdec, chunks the incoming
	systemstream=TRUE data into frames, sets caps data, and spits out
	PCM audio in addition to systemstream=FALSE video frames. Operates
	in chain mode only for now; should make a getrange version as
	well.

	* ext/dv/gstdv.c: New file, registers the libgstdv plugin.

	* ext/dv/Makefile.am: Library name changed to libgstdv. Split
	dvdec into dvdemux and dvdec.

2005-08-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_event), (gst_faad_chain):
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header):
	  Handle _push() return values.

2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_event):
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header):
	  Fix debug.

2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak),
	(qtdemux_video_caps):
	  Forwardport from 0.8 to implement RLE.

2005-08-15  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/README:
	Added rtsp server implementation docs.

2005-08-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/aalib/gstaasink.c:
	  aalib is LGPL, so this plugin can be LGPL