@@ -1,3 +1,11 @@
+2005-08-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/avi/gstavidemux.c: (gst_avi_demux_parse_stream),
+	(gst_avi_demux_stream_header):
+	* gst/qtdemux/qtdemux.c: (gst_qtdemux_change_state),
+	(gst_qtdemux_add_stream), (qtdemux_parse_tree):
+	  Uncomment metadata and codec-name handling.
+
 2005-08-16  Wim Taymans  <wim@fluendo.com>
 
 	* configure.ac:
